# nova-ansible

./: .copyrightignore  .gitignore  .gitreview  .rsync-filter  HACKING.rst  README.md  _nova-check-upgraded-packages.yml  _nova-configure.yml  _nova-install.yml  _nova-post-configure.yml  _nova-post-deploy.yml  _nova-reconfigure-credentials-change.yml  _nova-schedule-restart.yml  agent.yaml  nova-cloud-configure.yml  nova-compute-reboot.yml  nova-configure-monasca.yml  nova-deploy.yml  nova-host-evacuate.yml  nova-hugepages-status.yml  nova-reconfigure.yml  nova-restart.yml  nova-start.yml  nova-status.yml  nova-stop.yml  nova-upgrade.yml  setup.cfg  setup.py  test-requirements.txt  tox.ini
NOV_MON/: nova_heartbeat_check.py
ardana-ci/tests/: check-pci-passthrough.yml  copy.bash  test-plan.yaml
config/: nova-symlinks.yml
filter_plugins/: groupings.py  pci_passthrough_filter.py
roles/NOV-API/defaults/: main.yml
roles/NOV-API/meta/: main.yml
roles/NOV-API/tasks/: check_upgraded_packages.yml  configure.yml  install.yml  main.yml  start.yml  status.yml  stop.yml
roles/NOV-API/templates/: api-logging.conf.j2  api-paste.ini.j2  api.conf.j2  nova-placement-api-apache2.conf.j2
roles/NOV-API/vars/: debian.yml  redhat.yml  suse.yml
roles/NOV-CAU/defaults/: main.yml
roles/NOV-CAU/tasks/: _read_run_location.yml  check_upgraded_packages.yml  configure.yml  install.yml  main.yml  start.yml  status.yml  stop.yml
roles/NOV-CAU/templates/: consoleauth-logging.conf.j2
roles/NOV-CAU/vars/: debian.yml  redhat.yml  suse.yml
tests/NOV_MON/: test_nova_heartbeat_check.py
(+168 files in other folders)
