[metadata]
name = nova-ansible
author = "SUSE LLC"
author-email = ardana@googlegroups.com
summary = Nova Ansible tests
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    NOV-MON
